# vrp-ir

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  config_parsing_issue.yml  feature_request.yml
.github/workflows/: ai-review.yml  labeler.yml  lint.yml  publish.yml  release-please.yml  tests.yml  welcome.yml
docs/: aaa-password-policy-support-matrix.md  acceptance-report-example.md  commercial.md  corpus-acquisition-playbook.md  corpus-acquisition-tracker-template.md  corpus-intake-runbook.md  corpus-request-template.md  coverage-ledger.md  de-identifying-configs.md  evidence-batch-aaa-password-policy.md  evidence-batch-password-complexity-model-split.md  evidence-source-policy.md  evolution-plan-2026-06.md  implementation-plan-2026-06.md  password-complexity-command-model-matrix.md  program-plan-2026-2027.md  program-status-2026-06.md  release-process.md  spec-v0.1.md  standards-mapping.md
docs/demo/: README.md  demo.cast  demo.sh
docs/og/: README.md  make_card.py
examples/: sample-usg-risky.cfg  sample-usg.cfg  sample-vrp.cfg
src/vrp_ir/: __init__.py  acceptance.py  cli.py  models.py  parser.py  sourceref.py
tests/: test_aaa_local_user.py  test_aaa_password_policy.py  test_aaa_password_policy_audit.py  test_acceptance.py  test_acceptance_objects.py  test_check_coverage.py  test_cli_checks.py  test_evidence_policy.py  test_fixtures.py  test_golden_corpus.py  test_hrp_incomplete.py  test_http_mgmt.py  test_info_center.py  test_ntp.py  test_ntp_missing.py  test_objects.py  test_parser.py  test_permit_scope_address_set.py  test_registry.py  test_report_formats.py  test_snmp_community.py  test_snmp_v3.py  test_snmp_weak_community.py  test_ssh_cipher.py  test_standards_anchoring.py  test_telnet_mgmt.py  test_user_interface.py  test_user_password_complexity.py  test_vty_mgmt.py
tests/fixtures/: README.md  aaa-complexity-scope.cfg  aaa-complexity-scope.expected.json  aaa-password-policy.cfg  aaa-password-policy.expected.json  deidentified-golden-vrp.cfg  hardened-usg.cfg  hardened-usg.expected.json  mgmt-plane-cn.cfg  mgmt-plane-cn.expected.json  objects-nat-usg.cfg  objects-nat-usg.expected.json  risky-edge-usg.cfg  risky-edge-usg.expected.json
