[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vrp-ir"
version = "0.9.0"
description = "Source-traceable structured IR for Huawei VRP configurations (parse-time SourceRef)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Zynovex" }]
keywords = ["huawei", "vrp", "network-automation", "config-parsing", "sourceref", "netdevops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = []  # zero runtime dependencies by design

[project.urls]
Homepage = "https://github.com/zynovexllc/vrp-ir"
Source = "https://github.com/zynovexllc/vrp-ir"
Issues = "https://github.com/zynovexllc/vrp-ir/issues"
Changelog = "https://github.com/zynovexllc/vrp-ir/blob/main/CHANGELOG.md"
Releases = "https://github.com/zynovexllc/vrp-ir/releases"

[project.scripts]
vrp-ir = "vrp_ir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
# High-signal only: pyflakes (F) catches real defects — undefined names,
# unused imports — without imposing style churn. Formatting is intentionally
# left loose so contributed/generated PRs are not blocked on cosmetics.
select = ["F"]
